[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = "0.4"
edita = { path = "../../edita" }
console_error_panic_hook = "0.1.7"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
web-sys = { version = "0.3", features = [
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "CharacterData",
    "Selection",
    "Range",
    "CssFontFaceRule",
    "CssStyleDeclaration",
    "NodeList",
    "HtmlImageElement",
] }